--- a/my-app/src/Component/Tag/styles/TagCss.css
+++ b/my-app/src/Component/Tag/styles/TagCss.css
@@ -66,7 +66,10 @@
         width: 15%;
 
     }
-
+    #tagtop{
+        margin-top: 15px !important;
+        margin-bottom: 15px !important;
+    }
 }
 
 #tagtop{
