--- a/my-app/src/pages/ListPage/styles/ListPageCss.css
+++ b/my-app/src/pages/ListPage/styles/ListPageCss.css
@@ -6,7 +6,14 @@
         position: relative;
         right: 50px;
     }
-
+    .DESC{
+        font-size: 9px;
+        position: relative !important;
+        bottom: 0px !important;
+        top: 25px !important;
+        right: 105px;
+        
+    }
     #PointBtn{
         width: 100% !important;
         margin-bottom: 10px;
@@ -78,7 +85,14 @@
     .ListPage{
         width: 400 !important;
     }
- 
+    .DESC{
+        font-size: 9px;
+        position: relative !important;
+        bottom: 0px !important;
+        top: 35px !important;
+        right: 105px;
+        
+    }
 
     #PointBtn{
         width: 100% !important;
@@ -190,6 +204,14 @@
         margin-top: 5px;
         width:55% !important;
         font-size: 10px !important;
+    }
+    .DESC{
+        font-size: 5px !important;
+        position: relative !important;
+        bottom: 0px !important;
+        top: 10px !important;
+        right: 35px;
+        
     }
     
     .SNSBTN{
