--- a/my-app/src/styles/MainPageCss.css
+++ b/my-app/src/styles/MainPageCss.css
@@ -13,6 +13,7 @@
     .MainPage{
         width: 720px !important;
         margin: 0 auto;
+        overflow: hidden;
     }
     
     .Mid .DayToon .DayToonItem.second-item {
