--- a/my-app/src/Component/Tag/styles/TagCss.css
+++ b/my-app/src/Component/Tag/styles/TagCss.css
@@ -5,7 +5,6 @@
     margin: 0 auto;
 }
 .tagItem{
-
     width: 100%;
     float: left;
 }
@@ -43,7 +42,7 @@
     .tagItem li{
         width: 17% !important;
         margin-bottom: 15px !important;
-        margin-left: 20px;
+        margin-left: 17px !important;
     }
     .tah h3{
     }
