--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
-*{
+/* *{
     font-family: 'Jua', sans-serif;
     text-decoration-style: none;
-    text-decoration: none; /* 링크의 밑줄 제거 */
-    color: inherit; /* 링크의 색상 제거 */
+    text-decoration: none; 
+    color: inherit; 
     width: 360px;
     margin:  0 auto;
-}
+} */
 @media screen and (max-width:721px) and (min-width:362px) {
     /* 메인 */
     
@@ -178,12 +178,7 @@
     .AllToon table{
         margin: 0 !important;
     }
-    tr {
-        width: 100% !important;
-      }
-    td{
-        width: 100% !important; 
-    }
+
 /* test */
     
     .AllToonInfo {
