--- a/my-app/src/pages/serachwebtoonpage/SerchWebToonCss.module.css
+++ b/my-app/src/pages/serachwebtoonpage/SerchWebToonCss.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
+
 @media screen and (max-width:721px) and (min-width:362px) 
 {
     .SerchWebToon{
@@ -46,7 +48,10 @@
 
 
 .SerchWebToon{
-    width: 100%;
+    text-decoration-style: none;
+    text-decoration: none;        color: inherit;
+    width: 360px;
+    margin:  0 auto;
 }
 
 .SerchWebToon img{
