--- a/my-app/src/Component/Tag/styles/TagCss.css
+++ b/my-app/src/Component/Tag/styles/TagCss.css
@@ -42,11 +42,8 @@
     .tagItem li{
         width: 17% !important;
         margin-bottom: 15px !important;
-        margin-left: 17px !important;
+        margin-left: 17ㅈpx !important;
     }
-    .tah h3{
-    }
-
 
 }
 
