--- a/my-app/src/styles/NewToonCss.module.css
+++ b/my-app/src/styles/NewToonCss.module.css
@@ -4,9 +4,9 @@
   }
   .NewToonPage
   {
-    width: 80% !important;
+    width: 85% !important;
     position: relative;
-    right: 25%;
+    right: 15%;
     float: left !important;
   }
   .NewToonInfo{
@@ -16,8 +16,11 @@
   .NewToonItem img{
     height: 300px !important;
     width: 100% !important;
+    position: relative;
+    left: 29%;
     object-fit: contain !important;
   }
+  
 
 
 }
@@ -44,7 +47,6 @@
     cursor: pointer;
   }
   .NewToonInfo img {
-    
     height: 170px !important;
     border: 1px solid #000;
   }
@@ -74,19 +76,19 @@
     justify-content: center;
     cursor: pointer;
   }
+
+
   .NewToonInfo img {
-    
+    width: 100% !important;
   }
-
-
-
 
 }
 
 
 .NewToonPage {
   background-color: rgba(159, 142, 142,0.4);
-  display: flex;
+  float: left;
+  width: 100%;
   justify-content: center;
 }
 .slider {
@@ -100,7 +102,6 @@
 
 .NewToonInfo {
   width: 100%;
-  height: 260px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -112,8 +113,8 @@
 
 .NewToonItem img {
   object-fit: contain ;
-  height: 250px;
-  width: 100%;
+  width: 50%;
 }
+
 
 
